<resources>
    <string name="TimeWall">TimeWall</string>
    <string name="intro1">Welcome to TimeWall !</string>
    <string name="intro2">Calendar</string>
    <string name="intro3">Weather</string>
    <string name="intro4">Favorites</string>
    <string name="intro5">Assistant</string>
    <string name="intro1description">intro1description</string>
    <string name="intro2description">intro2description</string>
    <string name="intro3description">intro3description</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="week">Weekdays</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="daily">Daily</string>
    <string name="random">Random</string>
    <string name="calendar">Calendar</string>
    <string name="modify">Modify</string>
    <string name="setDefault">Set default</string>
    <string name="createdBy">Created by</string>
    <string name="close">Close</string>
    <string name="favoriteCreated">Successfully added to favorite</string>
    <string name="setWallpaperFavorite">New wallpaper setted</string>
    <string name="deleteImageFavorite">Image removed from favorites</string>
    <string name="ApiKey">dac0e2dbaa478d4f1dfc1eca05f202d3</string>
    <string name="weatherCardview">Weather</string>
    <string name="descriptionCalendar">A different wallpaper each day of week or every month</string>
    <string name="descriptionWeather">Change the wallpaper when the weather change</string>
    <string name="descriptionFavorite">Always a random image from your favorite</string>
    <string name="descriptionRandom">Always a random image</string>
    <string name="find">Find</string>
    <string name="selectModeCalendar">Mode</string>
    <string name="updateWeather">Update</string>
    <string name="changeLocation">Change location</string>
    <string name="month">Month</string>
    <string name="selectMode">Select mode</string>
    <string name="selectModeDescription">Lorem ipsum</string>
    <string name="changeLocationTitle">Change location</string>
    <string name="changeLocationDescription">Example Milano, IT</string>
    <string name="nullString"></string>
    <string name="citiesFounded">Cities founded</string>
    <string name="selectCity">Select your city</string>
    <string name="changeInterval">Interval</string>
    <string name="minute">Minute</string>
    <string name="changeIntervalTitle">Change update interval</string>
    <string name="switchCalendarActive">Service calendar started</string>
    <string name="switchCalendarNotActive">Service calendar stopped</string>
    <string name="switchWeatherActive">Service weather started</string>
    <string name="switchWeatherNotActive">Service weather stopped</string>
    <string name="switchFavoriteActive">Service favorite started</string>
    <string name="switchFavoriteNotActive">Service favorite stopped</string>
    <string name="switchAssistantActive">Service Assistant started</string>
    <string name="switchAssistantNotActive">Service Assistant stopped</string>
    <string name="searchLocation">Searching location</string>
    <string name="please_wait">Please wait</string>
    <string name="locationFounded">Location founded</string>
    <string name="connectionProblem">Connection problem</string>
    <string name="noCityFound">No city found</string>
    <string name="permissionTitle">Permission necessary</string>
    <string name="permissionStorage">I need to read storage to save images. Please grant it.</string>
    <string name="permissionCamera">I need to be able to use camera. Please grant me permission.</string>
    <string name="calendarNotification">Calendar activated</string>
    <string name="calendarNotificationContent">to do</string>
    <string name="favoriteNotification">Favorites activated</string>
    <string name="favoriteNotificationContent">to do</string>
    <string name="assistant">Assistant</string>
    <string name="descriptionAssistant">Automatic new images from all services</string>
    <string name="settings_notification_summary">Shows notification when wallpaper changes.</string>
    <string name="settings_notification_key">Notification</string>
    <string name="settings_notification_title">Notification</string>
    <string name="favorite_not_found">You don\'t have any favorite</string>

</resources>
