<android.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.preference.PreferenceCategory
        android:title="System">

        <android.preference.SwitchPreference
            android:key="@string/settings_notification_key"
            android:title="@string/settings_notification_title"
            android:summary="@string/settings_notification_summary"
            android:defaultValue="true" />

        <!--<android.preference.EditTextPreference-->
            <!--android:key="key2"-->
            <!--android:title="EditText Preference"-->
            <!--android:summary="EditText Summary"-->
            <!--android:dialogMessage="Dialog Message"/>-->
        <!--<android.preference.CheckBoxPreference-->
            <!--android:key="key3"-->
            <!--android:title="CheckBox Preference"-->
            <!--android:summary="CheckBox Summary"-->
            <!--android:defaultValue="true"/>-->
    </android.preference.PreferenceCategory>

</android.preference.PreferenceScreen>